# llm_proxy

./: .gitignore  pyproject.toml  sample.env  start.sh
developers/: call_chat_v1.py  call_chat_v1.sh  call_chat_v2.py  call_chat_v2.sh  run_uvicorn.sh
resources/: environment.py
server/: cohere_service.py  common_service.py  compatible_types.py  debug_utils.py  error_utils.py  errors.py  func_utils.py  generic_service.py  openai_service.py  payloads.py  payloads_cohere.py  payloads_openai.py  server.py
tools/: body_coherev1_template  body_openai_template  call_cohere.sh  call_llm.py  call_llm.sh  header_cohere_template  header_openai_template  start.sh  start_proxy.sh
work/: lang_info_appender.patch
